# LearnAndroidVideo

./: .gitignore  README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/media/: cache_frame.cpp  cache_frame.h  const.h  media_codes.h
app/src/main/cpp/media/codec/decoder/: base_decoder.cpp  base_decoder.h  i_decoder.h
app/src/main/cpp/media/codec/extractor/: audio_extractor.cpp  audio_extractor.h  base_extractor.cpp  base_extractor.h  i_extractor.cpp  i_extractor.h  video_extractor.cpp  video_extractor.h
app/src/main/cpp/media/codec/track/: audio_track.cpp  audio_track.h  base_track.cpp  base_track.h  base_video_track.cpp  base_video_track.h  default_video_track.cpp  default_video_track.h  i_sync_clock_receiver.h  i_track.h  i_track_callback.h  i_video_track_callback.h
app/src/main/cpp/media/decoder/: base_decoder.cpp  base_decoder.h  const.h
app/src/main/cpp/media/decoder/audio/: audio_decoder.cpp  audio_decoder.h
app/src/main/cpp/media/decoder/video/: video_decoder.cpp  video_decoder.h
app/src/main/cpp/media/encoder/: base_encoder.cpp  base_encoder.h  encode_cache_frame.h  encode_frame.h  i_encode_state_cb.h  i_encoder.h
app/src/main/cpp/media/encoder/audio/: audio_encoder.cpp  audio_encoder.h
app/src/main/cpp/media/encoder/video/: video_encoder.cpp  video_encoder.h
app/src/main/cpp/media/ffmpeg/: default_player.cpp  default_player.h  opengl_player.cpp  opengl_player.h
app/src/main/cpp/media/ffmpeg/decoder/: audio_decoder.cpp  audio_decoder.h  base_decoder.cpp  base_decoder.h  i_decoder_callback.h  video_decoder.cpp  video_decoder.h
app/src/main/cpp/media/ffmpeg/render/: base_render.cpp  base_render.h  i_render_callback.h
app/src/main/cpp/media/ffmpeg/render/audio/: audio_render.cpp  audio_render.h  opensl_render.cpp  opensl_render.h
app/src/main/cpp/media/ffmpeg/render/video/: base_video_render.cpp  base_video_render.h  default_video_render.cpp  default_video_render.h  opengl_video_render.cpp  opengl_video_render.h
app/src/main/cpp/media/ffmpeg/track/: audio_track.cpp  audio_track.h  base_track.cpp  base_track.h  i_track_callback.h  opengl_video_track.cpp  opengl_video_track.h  video_track.cpp  video_track.h
app/src/main/cpp/media/muxer/: ff_repack.cpp  ff_repack.h  i_muxer_cb.h  mp4_muxer.cpp  mp4_muxer.h
app/src/main/cpp/media/opengl/drawer/: drawer.cpp  drawer.h  fbo_soul_video_drawer.cpp  fbo_soul_video_drawer.h  matrix.cpp  matrix.h  video_drawer.cpp  video_drawer.h
app/src/main/cpp/media/opengl/drawer/proxy/: def_drawer_proxy_impl.cpp  def_drawer_proxy_impl.h  drawer_proxy.cpp  drawer_proxy.h
app/src/main/cpp/media/opengl/egl/: egl_core.cpp  egl_core.h  egl_surface.cpp  egl_surface.h
app/src/main/cpp/media/player/: player.cpp  player.h  player_state.h
app/src/main/cpp/media/player/codec_player/: codec_player.cpp  codec_player.h  default_codec_player.cpp  default_codec_player.h
app/src/main/cpp/media/player/default_player/: media_player.cpp  media_player.h
app/src/main/cpp/media/player/ffmpeg_player/: ffmpeg_player.cpp  ffmpeg_player.h
app/src/main/cpp/media/player/ffmpeg_player/default_player/: media_player.cpp  media_player.h
app/src/main/cpp/media/player/ffmpeg_player/opengl_player/: opengl_player.cpp  opengl_player.h
app/src/main/cpp/media/player/opengl_player/: opengl_player.cpp  opengl_player.h
app/src/main/cpp/media/render/: base_render.cpp  base_render.h  cache_av_frame.cpp  cache_av_frame.h  cache_frame.cpp  cache_frame.h  i_render_state_cb.h  render_frame.cpp  render_frame.h
app/src/main/cpp/media/render/audio/: audio_render.cpp  audio_render.h  opensl_render.cpp  opensl_render.h
app/src/main/cpp/media/render/video/: base_video_render.cpp  base_video_render.h
app/src/main/cpp/media/render/video/default/: default_video_render.cpp  default_video_render.h
app/src/main/cpp/media/render/video/opengl/: opengl_pixel_receiver.h  opengl_render.cpp  opengl_render.h
app/src/main/cpp/media/synthesizer/: synthesizer.cpp  synthesizer.h
app/src/main/cpp/utils/: logger.h  timer.c
app/src/main/java/com/songwj/openvideo/: Camera1PreviewGLSurfaceActivity.kt  Camera1PreviewGLSurfaceFilterActivity.kt  Camera1PreviewSurfaceViewActivity.kt  Camera1PreviewTextureViewActivity.kt  Camera1SystemMediaRecordActivity.kt  Camera1VideoRecordFromEGLActivity.kt  Camera1VideoRecordFromNV21Activity.kt  Camera2OutputActivity.kt  Camera2PreviewActivity.kt  Camera2PreviewGLSurfaceFilterActivity.kt  Camera2RecordGLSurfaceFIlterActivity.kt  Camera2TakePictureActivity.kt  Camera2VideoRecordActivity.kt  CameraXPreviewActivity.kt  CubeScaleRotateActivity.kt  EGLPlayerSurfaceViewActivity.kt  EGLPlayerTextureViewActivity.kt  FBOPlayerActivity.kt  FBOSelectActivity.kt  FFmpegEGLPlayerActivity.kt  FengLightActivity.kt  (+17 more)
app/src/main/res/layout/: activity_camera1_preview.xml  activity_camera1_preview_glsurface.xml  activity_camera1_preview_glsurface_filter.xml  activity_camera1_preview_texture_view.xml  activity_camera1_system_media_record.xml  activity_camera1_video_record_from_egl.xml  activity_camera1_video_record_from_nv21.xml  activity_camera2_output.xml  activity_camera2_preview.xml  activity_camera2_take_picture.xml  activity_camera2_video_record.xml  activity_camera_x_preview.xml  activity_cube_scale_rotate.xml  activity_egl_player_surface_view.xml  activity_egl_player_texture_view.xml  activity_fbo_player.xml  activity_fbo_select.xml  activity_feng_light.xml  activity_ffmpeg_repack.xml  activity_gupimage_filter_camera_preview.xml  activity_main.xml  activity_media_codec.xml  activity_media_codec_repack.xml  activity_model_loader.xml  activity_native_codec_player.xml  activity_opengl_player.xml  activity_rtmp_live_push.xml  activity_simple_render_glsurface_view.xml  activity_skybox.xml  activity_synthesizer.xml  activity_texture_light.xml  texture_video_player.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml
app/src/main/res/xml/: network_security_config.xml
gradle/wrapper/: gradle-wrapper.properties
(+127 files in other folders)
